--- a/styles/onlineresumemain.css
+++ b/styles/onlineresumemain.css
@@ -2995,7 +2995,7 @@ p {
 
 body {
   color: #fffefe;
-  font-size: 14px;
+  font-size: 9px;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   -moz-osx-font-smoothing: grayscale;
   -webkit-font-smoothing: antialiased;
@@ -3005,7 +3005,7 @@ body {
 
 .main {
   position: relative;
-  background: #FFFFFF;
+  background: rgb(23, 54, 25);
 }
 
 /* Animations */
