--- a/styles/onlineresumemain.css
+++ b/styles/onlineresumemain.css
@@ -49,7 +49,7 @@
   transition: border-color ease-in-out .15s, box-shadow ease-in-out .15s;
   transition: border-color ease-in-out .15s, box-shadow ease-in-out .15s, -webkit-box-shadow ease-in-out .15s;
   margin-right: 20px;
-  background: rgba(44, 44, 44, 0.2);
+  background: rgba(104, 15, 15, 0.338);
 }
 
 .bootstrap-switch .bootstrap-switch-container {
@@ -269,7 +269,7 @@
 }
 
 .bootstrap-switch.bootstrap-switch-on .bootstrap-switch-brown ~ .bootstrap-switch-default {
-  background-color: #378C3F;
+  background-color: #156547;
 }
 
 .bootstrap-switch.bootstrap-switch-on .bootstrap-switch-blue ~ .bootstrap-switch-default {
@@ -281,7 +281,7 @@
 .bootstrap-switch.bootstrap-switch-off .bootstrap-switch-blue,
 .bootstrap-switch.bootstrap-switch-off .bootstrap-switch-orange,
 .bootstrap-switch.bootstrap-switch-off .bootstrap-switch-green {
-  background-color: #E3E3E3;
+  background-color: #8b6565;
 }
 
 .bootstrap-switch-off .bootstrap-switch-handle-on {
@@ -2995,7 +2995,7 @@ p {
 
 body {
   color: #fffefe;
-  font-size: 9px;
+  font-size: 11px;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   -moz-osx-font-smoothing: grayscale;
   -webkit-font-smoothing: antialiased;
@@ -5123,7 +5123,7 @@ Created using IcoMoon - icomoon.io
 .section {
   padding: 70px 0;
   position: relative;
-  background: rgb(41, 65, 48);
+  background: rgb(85, 140, 63, 0.6);
 }
 
 .section .row + .category {
@@ -6936,12 +6936,32 @@ Created using IcoMoon - icomoon.io
   margin: 0;
 }
 
-.gallery figure.cc-effect figcaption::before,
-.gallery figure.cc-effect figcaption::after {
+.gallery figure.cc-effect figcaption::before {
+  content: ''; /* Required for ::before to render */
   position: absolute;
-  content: '';
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 35, 0, 0.95);
   opacity: 0;
+  transform: scale(0.9);
+  transition: opacity 0.3s ease, transform 0.3s ease;
+  z-index: 1;
 }
+
+.gallery figure.cc-effect:hover figcaption::before {
+  opacity: 1;
+  transform: scale(1);
+}
+
+.gallery figure.cc-effect .h4,
+.gallery figure.cc-effect p {
+  position: relative;
+  z-index: 2;
+  opacity: 1;
+}
+
 
 .gallery figure.cc-effect figcaption::before {
   top: 10px;
@@ -7028,7 +7048,7 @@ Created using IcoMoon - icomoon.io
 }
 
 .gallery figure.cc-effect:hover figcaption:before {
-  background: rgba(27, 23, 23, 0.5);
+  background: rgba(27, 23, 23, 0.85);
 }
 
 .gallery figure.cc-effect:hover .h4,
@@ -7058,13 +7078,13 @@ Created using IcoMoon - icomoon.io
 /* Body */
 /* Profile Page Background Style */
 .page-header {
-  background: rgba(44, 44, 44, 0.2);
+  background: rgba(137,207,240);
   /* For browsers that do not support gradients */
   /* For Safari 5.1 to 6.0 */
   /* For Opera 11.1 to 12.0 */
   /* For Firefox 3.6 to 15 */
-  background: -webkit-gradient(linear, left bottom, left top, from(rgba(44, 44, 44, 0.2)), to(rgba(55, 140, 63, 0.6)));
-  background: linear-gradient(0deg, rgba(44, 44, 44, 0.2), rgba(55, 140, 63, 0.6));
+  background: -webkit-gradient(linear, left bottom, left top, from(rgba(101, 115, 163)), to(rgba(85, 140, 63, 0.6)));
+  background: linear-gradient(0deg, rgba(137,207,240), rgba(55, 170, 43, 0.6));
   /* Standard syntax */
 }
 
